--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -13,6 +13,8 @@
 
 {% include carousel.html %}
   
+{% include news.html %}
+  
 {% include publications_thesis.html %}
 
 {% include publications_featured.html %}
