--- a/_includes/news.html
+++ b/_includes/news.html
@@ -5,24 +5,19 @@
 
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="page-header">Talks and Presentations</h2>
+        <h2 class="page-header">News</h2>
       </div>
     </div>
 	{% assign curDate = site.time | date: '%s' %}
-    {% assign talks = site.data.talks | sort:"date" %}
-    {% for t in talks reversed %}
+    {% assign news = site.data.news | sort:"date" %}
+    {% for n in news reversed %}
     <div class="row">
       <div class="col-md-2 col-md-offset-1 col-sm-2 text-right">
-        <h4>{{ t.date | date : "%B %Y" }}</h4>
+        <h4>{{ n.date | date : "%B %Y" }}</h4>
       </div>
-	  {% assign talkDate = t.date | date: '%s' %}
+	  {% assign newsDate = n.date | date: '%s' %}
       <div class="col-md-8 col-sm-10">
-        <h4>{{ t.title}}</h4>
-        <p class="text-danger">{% if talkDate > curDate %}<b>to be held at {% endif %}{{ t.location }}{% if talkDate > curDate %}</b>{% endif %}</p>
-        {% if t.downloads %}
-        <p>{% for download in t.downloads %}
-          <a href="{{ download.href }}" target="_blank">{{ download.desc }}</a>{% if download != t.downloads.last %}, {% endif %}{% endfor %}
-        </p>{% endif %}
+        <h4>{{ n.text}}</h4>
       </div>
     </div>
     {% endfor %}
