--- a/_includes/news.html
+++ b/_includes/news.html
@@ -19,6 +19,9 @@
       <div class="col-md-8 col-sm-10">
         <h4>{{ n.text}}</h4>
       </div>
+      <div class="col-md-2 col-md-offset-1 col-sm-2 text-right">
+        <h4><img src='/img/award.png'></h4>
+      </div>
     </div>
     {% endfor %}
   </div>
