--- a/_includes/news.html
+++ b/_includes/news.html
@@ -16,10 +16,10 @@
         <h4>{{ n.date | date : "%B %Y" }}</h4>
       </div>
 	  {% assign newsDate = n.date | date: '%s' %}
-      <div class="col-md-6 col-sm-10">
+      <div class="col-md-7 col-sm-10">
         <h4>{{ n.text}}</h4>
       </div>
-      <div class="col-md-2 col-md-offset-1 col-sm-2 text-right">
+      <div class="col-md-1 col-md-offset-1 col-sm-2 text-left">
         <h4><img src='/img/award.png'></h4>
       </div>
     </div>
