--- a/_includes/news.html
+++ b/_includes/news.html
@@ -19,7 +19,7 @@
       <div class="col-md-7 col-sm-10">
         <h4>{{ n.text}}</h4>
       </div>
-      <div class="col-md-1 col-md-offset-1 col-sm-2 text-left">
+      <div class="col-md-1 text-left">
         <h4><img src='/img/award.png'></h4>
       </div>
     </div>
