--- a/_includes/news.html
+++ b/_includes/news.html
@@ -17,10 +17,10 @@
       </div>
 	  {% assign newsDate = n.date | date: '%s' %}
       <div class="col-md-8 col-sm-10">
-        <h4>{{ n.text}}</h4>
+        <p>{{ n.text}}</p>
       </div>
       <div class="col-md-1 text-left">
-        <h4>{{ n.icon}}</h4>
+        <p>{{ n.icon}}</p>
       </div>
     </div>
     {% endfor %}
