--- a/_includes/publications_featured.html
+++ b/_includes/publications_featured.html
@@ -1,6 +1,6 @@
 
 <!-- Publications -->
-<section id="publications">
+<section id="publications-featured">
   <div class="container">
   
     <div class="row">
