--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,11 +17,12 @@
       <ul class="nav navbar-nav navbar-right">
         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
         <li class="hidden"><a class="page-scroll" href="#page-top"></a></li>
+	<li><a class="page-scroll" href="#news">News</a></li>
         <li><a class="page-scroll" href="#publications">Publications</a></li>
         <li><a class="page-scroll" href="#talks">Talks</a></li>
         <li><a class="page-scroll" href="#teaching">Teaching</a></li>
-		<li><a class="page-scroll" href="#activities">Professional Activities</a></li>
-		<li><a class="page-scroll" href="#videos">Videos</a></li>
+	<li><a class="page-scroll" href="#activities">Professional Activities</a></li>
+	<li><a class="page-scroll" href="#videos">Videos</a></li>
         <li><a class="page-scroll" href="#contact">Contact</a></li>
       </ul>
     </div>
