--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -17,6 +17,9 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/jquery.spin.min.js"></script>
 
+<!-- clipboard.js -->
+<script src="//zenorocha.github.io/clipboard.js"></script>
+
 <!-- Scrolling Nav JavaScript -->
 <script src="{{ "/js/scrolling-nav.js" | prepend: site.baseurl }}"></script>
 
