--- a/_includes/publications_featured.html
+++ b/_includes/publications_featured.html
@@ -9,9 +9,11 @@
       </div>
     </div>
     {% assign publications = site.data.publications | sort:"date" %}
-    {% assign currentyear = '0' %}
+    {% assign previousyear = '0' %}
     {% for p in publications reversed %}
-    {% if currentyear != p.date | date: '%Y' %}{% assign currentyear = date: '%Y' %}<legend>{{ p.date | date: '%Y' }}</legend>{% endif %}
+    {% assign currentyear = p.date | date: '%Y' %}
+    {% if currentyear != previousyear %}<legend>{{ p.date | date: '%Y' }}</legend>{% endif %}
+    {% assign previousyear = currentyear %}
     <div class="row{% if p != publications.first %} not-last{% endif %}">
       <div class="col-sm-2">
         {% include thumbnail.html %}
