--- a/_includes/news.html
+++ b/_includes/news.html
@@ -8,9 +8,9 @@
         <h2 class="page-header">News</h2>
       </div>
     </div>
-	{% assign curDate = site.time | date: '%s' %}
+    {% assign curDate = site.time | date: '%s' %}
     {% assign news = site.data.news | sort:"date" %}
-    {% for n in news reversed %}
+    {% for n in news reversed limit:10 %}
     <div class="row">
       <div class="col-md-2 col-md-offset-1 col-sm-2 text-right">
         <h4>{{ n.date | date : "%B %Y" }}</h4>
