--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
   <!-- themes (*preferred):
     cerulean, cosmo*, cyborg, darkly*, flatly*, journal, lumen, paper, readable, sandstone*, simplex*, slate*, spacelab, superhero*, united*, yeti* -->
   <!--<link rel="stylesheet" href="http://bootswatch.com/yeti/bootstrap.min.css">-->
-  <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="http://bootswatch.com/3/yeti/bootstrap.min.css">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
