--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -21,6 +21,8 @@
               <label class="col-sm-2 control-label">Email</label>
               <div class="col-sm-10">
                 <p class="form-control-static"><span class="text-danger">{{ contact.email }}</span> (<a href="mailto:{{ contact.email }}">mailto</a>)</p>
+              </div>
+	      <div class="col-sm-10">
 		<p class="form-control-static"><span class="text-danger">{{ contact.email2 }}</span> (<a href="mailto:{{ contact.email2 }}">mailto</a>)</p>
               </div>
             </div>
