--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -22,6 +22,7 @@
               <div class="col-sm-10">
                 <p class="form-control-static"><span class="text-danger">{{ contact.email }}</span> (<a href="mailto:{{ contact.email }}">mailto</a>)</p>
               </div>
+	      <label class="col-sm-2 control-label"></label>
 	      <div class="col-sm-10">
 		<p class="form-control-static"><span class="text-danger">{{ contact.email2 }}</span> (<a href="mailto:{{ contact.email2 }}">mailto</a>)</p>
               </div>
