--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,6 +18,7 @@
         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
         <li class="hidden"><a class="page-scroll" href="#page-top"></a></li>
 	<li><a class="page-scroll" href="#news">News</a></li>
+	<li><a class="page-scroll" href="#artworks">Artworks</a></li>
         <li><a class="page-scroll" href="#publications">Publications</a></li>
         <li><a class="page-scroll" href="#talks">Talks</a></li>
         <li><a class="page-scroll" href="#teaching">Teaching</a></li>
