--- a/_includes/artworks.html
+++ b/_includes/artworks.html
@@ -9,13 +9,13 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-4">
+      <div class="col-md-4">
         <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/41c6986925eb539186f7ad45ddef2570.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
       </div>
-      <div class="col-xs-4">
+      <div class="col-md-4">
         <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/41c6986925eb539186f7ad45ddef2570.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
       </div>
-      <div class="col-xs-4">
+      <div class="col-md-4">
         <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/41c6986925eb539186f7ad45ddef2570.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
       </div>
     </div>
